Fix the text alignment on the honours page on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -847,6 +847,10 @@ article::first-letter {
         grid-template-columns: repeat(auto-fill, 250px);
     }
 
+    .honours-info {
+        padding-left:0px;
+    }
+
     .honours h1 {
         padding-top: 0;
         font-size: 2em;
